3.1.7-dev (unreleased)
-----

LIMS-1624: Import default test.xlsx fails
LIMS-1614: Error when selecting Analysis Administration Tab after receiving a sample with Sampling Workflow enabled
LIMS-1605: Tescan TIMA interface
LIMS-1604: BioDrop uLite interface
LIMS-1603: Life Technologies Qubit interface
LIMS-1517: Storage field tag untranslated?
LIMS-1518: Storage Location table
LIMS-1527: CC Contact on AR view (edit) offers all contacts in system
LIMS-1536: Add button [Add], to alow quickly addings in referencewidget
LIMS-1587: Better support for extension of custom sample labels
LIMS-1622: Version Check does not correctly check cache
LIMS-1623: Implement bika-frontpage as a BrowserView


3.1.6 (2014-12-17)
------------------
LIMS-1530: Scrambled Analysis Category order in Published Results
LIMS-1529: Error while inserting an AR with container-based partitioning is required
LIMS-1460: Additional field in AR for comments or results interpretation
LIMS-1441: An error message related to partitions unit is shown when selecting analysis during AR creation
LIMS-1470: AS Setup. File attachment field tag is missing
LIMS-1422: Results doesn't display yes/no once verified but 1 or 0
LIMS-1486: Typos in instrument messages
LIMS-1498: Published Results not Showing for Logged Clients
LIMS-1445: Scientific names should be written in italics in published reports
LIMS-1389: Units in results publishing should allow super(sub)script format, for example in cm2 or m3
LIMS-1500: Alere Pima's Instrument Interfice
LIMS-1457: Exponential notation in published AR pdf should be formatted like a×10^b instead of ae^+b
LIMS-1334: Calculate result precision from Uncertainty value
LIMS-1446: After retracting a published AR the Sample gets cancelled
LIMS-1390: More workflow for Batches
LIMS-1378: Bulking up Batches
LIMS-1479: new-version and upgrade-steps should be python viewlets
LIMS-1362: File attachment uploads to Batches